--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,13 +15,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        otp: ['24.3', '25.3', '26.2.1']
-        elixir: ['1.13.4', '1.14.5', '1.15.7', '1.16.1']
+        otp: ['25.3', '26.2.4']
+        elixir: ['1.14.5', '1.15.7', '1.16.2']
         # https://hexdocs.pm/elixir/compatibility-and-deprecations.html
         exclude:
-          - otp: '26.2.1'
-            elixir: '1.13.4'
-          - otp: '26.2.1'
+          - otp: '26.2.4'
             elixir: '1.14.5'
     env:
       MIX_ENV: test
