--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,12 +15,24 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        otp: ['25.3', '26.2.4']
-        elixir: ['1.14.5', '1.15.7', '1.16.2']
+        otp: ['24', '25', '26', '27']
+        elixir: ['1.13.4', '1.14.5', '1.15.7', '1.16.3', '1.17.2']
         # https://hexdocs.pm/elixir/compatibility-and-deprecations.html
         exclude:
-          - otp: '26.2.4'
+          - otp: '24'
+            elixir: '1.17.2'
+          - otp: '27'
+            elixir: '1.16.3'
+          - otp: '27'
+            elixir: '1.15.7'
+          - otp: '27'
             elixir: '1.14.5'
+          - otp: '26'
+            elixir: '1.14.5'
+          - otp: '27'
+            elixir: '1.13.4'
+          - otp: '26'
+            elixir: '1.13.4'
     env:
       MIX_ENV: test
     steps:
@@ -41,8 +53,7 @@ jobs:
         with:
           path: deps
           key: ${{ runner.os }}-${{matrix.otp}}-${{matrix.elixir}}-mix-${{ env.cache-name }}-${{ hashFiles('**/mix.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-${{matrix.otp}}-${{matrix.elixir}}-mix-${{ env.cache-name }}-
+          restore-keys: ${{ runner.os }}-${{matrix.otp}}-${{matrix.elixir}}-mix-${{ env.cache-name }}-
 
       - name: Cache compiled build
         id: cache-build
